<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheet"
    android:background="@drawable/bottom_sheet_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/syne_bold"
        android:text="@string/send_me_a_message"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/messageTextField"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:autofillHints="none"
        android:background="@drawable/bg_text_field"
        android:fontFamily="@font/inter_medium"
        android:gravity="top"
        android:textSize="14sp"
        android:hint="@string/type_here"
        android:inputType="textCapSentences|textMultiLine"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#546E7A"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView1" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/inter_medium"
        android:text="@string/send"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/messageTextField"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/syne_bold"
        android:text="@string/social_media"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sendButton" />

    <ImageView
        android:id="@+id/gitHubImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_text_field"
        android:contentDescription="@string/app_name"
        android:padding="8dp"
        android:src="@drawable/ic_github"
        app:layout_constraintEnd_toStartOf="@id/linkedInImage"
        app:layout_constraintStart_toStartOf="@id/textView2"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <ImageView
        android:id="@+id/linkedInImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/bg_text_field"
        android:contentDescription="@string/app_name"
        android:padding="8dp"
        android:src="@drawable/ic_linkedin"
        app:layout_constraintBottom_toBottomOf="@+id/gitHubImage"
        app:layout_constraintEnd_toStartOf="@id/twitterImage"
        app:layout_constraintStart_toEndOf="@id/gitHubImage"
        app:layout_constraintTop_toTopOf="@+id/gitHubImage" />

    <ImageView
        android:id="@+id/twitterImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/bg_text_field"
        android:contentDescription="@string/app_name"
        android:padding="8dp"
        android:src="@drawable/ic_twitter"
        app:layout_constraintBottom_toBottomOf="@+id/linkedInImage"
        app:layout_constraintStart_toEndOf="@id/linkedInImage"
        app:layout_constraintTop_toTopOf="@+id/linkedInImage"
        tools:ignore="ImageContrastCheck" />

    <View
        android:id="@+id/viewBottom"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/twitterImage" />

</androidx.constraintlayout.widget.ConstraintLayout>