<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context="com.swancodes.miresume.fragments.EducationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:padding="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/certificatesHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/syne_bold"
            android:text="@string/certificates"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/recycler_view"
            app:layout_constraintTop_toBottomOf="@id/recycler_view" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="120dp"
            android:layout_height="110dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background"
            app:layout_constraintStart_toStartOf="@id/certificatesHeading"
            app:layout_constraintTop_toBottomOf="@id/certificatesHeading">

            <ImageView
                android:id="@+id/udemy"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="6dp"
                android:contentDescription="@string/app_name"
                android:padding="4dp"
                android:src="@drawable/ic_award_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/udemy"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/udemy"
                app:layout_constraintStart_toStartOf="@id/udemy"
                app:layout_constraintTop_toBottomOf="@id/udemy" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/_2021"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/textView"
                app:layout_constraintStart_toStartOf="@id/textView"
                app:layout_constraintTop_toBottomOf="@id/textView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="120dp"
            android:layout_height="110dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/background"
            app:layout_constraintBottom_toBottomOf="@id/constraintLayout"
            app:layout_constraintStart_toEndOf="@id/constraintLayout"
            app:layout_constraintTop_toTopOf="@id/constraintLayout"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/kodeCamp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="6dp"
                android:contentDescription="@string/app_name"
                android:padding="4dp"
                android:src="@drawable/ic_award_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/kode_camp"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/kodeCamp"
                app:layout_constraintStart_toStartOf="@id/kodeCamp"
                app:layout_constraintTop_toBottomOf="@id/kodeCamp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/_2022"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/textView3"
                app:layout_constraintStart_toStartOf="@id/textView3"
                app:layout_constraintTop_toBottomOf="@id/textView3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>